# Strata

./: .gitignore  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  test_e2e.py
.github/workflows/: publish.yml
basalt_strata/: __init__.py  __main__.py  analytics.py  backtest.py  datafeed.py  execution.py  strategy.py  timeframes.py
demo/: README.md  run_demo.py
examples/: my_strategies.py  run_backtest.py  run_base_strategy.py  run_real_data.py
